--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "author": "UNICEF",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.8.6 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.6 || ^17.0.0 || ^18.0.0",
     "prop-types": "^15.7.2",
-    "@material-ui/core": ">= 4.3.0"
+    "@mui/material": "^5.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -41,7 +41,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.8.3",
+    "@mui/material": "^5.0.0-rc.1",
     "@types/node": "^12.6.8",
     "babel-core": "^6.23.0",
     "babel-loader": "^8.0.5",
